@@ -57,12 +57,12 @@
 		<dependency>
 			<groupId>com.qubit.solution.fenixedu</groupId>
 			<artifactId>fenixedu-academic-core</artifactId>
-			<version>39.2.0</version>
+			<version>40.5.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.fenixedu</groupId>
 			<artifactId>fenixedu-academic-extensions</artifactId>
-			<version>4.16.1</version>
+			<version>4.17.0</version>
 		</dependency>
                 <dependency>
                         <groupId>org.fenixedu</groupId>
