@@ -1,0 +1,9 @@
+package org.fenixedu.academic.domain;
+
+public class Department extends Department_Base {
+    
+    public Department() {
+        super();
+    }
+    
+}
