@@ -1,3 +1,5 @@
+- Refactor: Add entity Department, from academic-core
+
 7.0.6 (17-01-2023)
 - Bug fix: Struts messages not supported anymore
 
